# remitlend

./: .gitignore
contracts/: Cargo.toml  FUZZING_README.md  PR_TEMPLATE_FUZZING.md  fuzz_campaign.sh  fuzz_invariants.md  fuzzing_article.md
contracts/fuzz/: Cargo.toml
contracts/fuzz/fuzz_targets/: lending_pool_fuzz.rs  loan_manager_fuzz.rs  remittance_nft_fuzz.rs
contracts/fuzz/reports/: summary_20260222_015725.md  summary_20260222_020857.md
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: lib.rs  test.rs
contracts/lending_pool/test_snapshots/test/: test_deposit_after_withdraw_frees_cap_space.1.json  test_deposit_exceeds_cap_panics.1.json  test_deposit_flow.1.json  test_deposit_unauthorized.1.json  test_deposit_withdraw_invariants.1.json  test_deposit_withdraw_invariants.2.json  test_deposit_withdraw_invariants.3.json  test_deposit_withdraw_invariants.4.json  test_deposit_withdraw_invariants.5.json  test_deposit_withdraw_invariants.6.json  test_deposit_within_cap_succeeds.1.json  test_insufficient_balance_withdraw_panic.1.json  test_insufficient_pool_liquidity_withdraw_panic.1.json  test_negative_deposit_panic.1.json  test_negative_withdraw_panic.1.json  test_no_cap_allows_unlimited_deposits.1.json  test_set_and_get_max_pool_size.1.json  test_set_negative_max_pool_size_panics.1.json  test_withdraw_flow.1.json  test_withdraw_reduces_total_deposits.1.json
contracts/loan_manager/: Cargo.toml
contracts/loan_manager/src/: lib.rs  test.rs
contracts/loan_manager/test_snapshots/test/: test_access_controls_unauthorized_repay.1.json  test_approve_already_approved_loan.1.json  test_approve_loan_flow.1.json  test_approve_nonexistent_loan.1.json  test_full_repayment_with_interest.1.json  (+9 more)
contracts/remittance_nft/: Cargo.toml
contracts/remittance_nft/src/: lib.rs  test.rs
(+101 files in other folders)
