[workspace]
resolver = "2"
members = [
  "remittance_nft",
  "loan_manager",
  "lending_pool",
]
exclude = [
  "fuzz",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
