[package]
name = "lending_pool"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test-fuzz = "7.2.5"
arbitrary = { version = "1.3", features = ["derive"] }
